--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://firststepimage.s3.ap-northeast-2.amazonaws.com/Admin/Admin_Logo.png" />
+  <link rel="icon" type="image/png" href="https://firststepimage.s3.ap-northeast-2.amazonaws.com/Admin/Admin_Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
-  <link rel="apple-touch-icon" href="https://firststepimage.s3.ap-northeast-2.amazonaws.com/Admin/Admin_Logo.png" />
+  <link rel="apple-touch-icon" type="image/png" href="https://firststepimage.s3.ap-northeast-2.amazonaws.com/Admin/Admin_Logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <style>
     #root {
